--- a/Sample-2/src/main/resources/bootstrap.yml
+++ b/Sample-2/src/main/resources/bootstrap.yml
@@ -8,10 +8,15 @@ spring:
   cloud:
     config:
       enabled: true
-      uri: http://localhost:8080   
+      uri: http://localhost:8080 
+    consul:
+      host: localhost
+      discovery:
+        prefer-ip-address: true
+        instanceId: ${spring.application.name}:${spring.application.instance_id:${random.value}}
     vault:
       port: 8200
-      host: 127.0.0.1
+      host: localhost
       token: 00000000-0000-0000-0000-000000000000
       scheme: http
       kv:
@@ -19,7 +24,7 @@ spring:
         backend: tcds/kv/app-name
         application-name: config-server-client
   config:
-    import: vault://secret/config-server-client
+    import: vault://secret/config-server-client/development
   cache:
     type: redis
     redis:
@@ -27,6 +32,9 @@ spring:
 management:
   security:
     enabled:  false
+  health:
+    consul:
+      enabled: false
 jwt:
   secret: harini
 springdoc:
