--- a/Sample-2/src/main/resources/bootstrap.yml
+++ b/Sample-2/src/main/resources/bootstrap.yml
@@ -14,6 +14,8 @@ spring:
       discovery:
         prefer-ip-address: true
         instanceId: ${spring.application.name}:${spring.application.instance_id:${random.value}}
+        health-check-path: /actuator/health
+        health-check-interval: 1m
     vault:
       port: 8200
       host: localhost
@@ -32,9 +34,13 @@ spring:
 management:
   security:
     enabled:  false
-  health:
-    consul:
-      enabled: false
+  endpoint:
+    metrics:
+      enabled: true
+  endpoints:
+    web:
+      exposure:
+        include: health, metrics  
 jwt:
   secret: harini
 springdoc:
